# mewgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  mewgent.spec  pyproject.toml  run.bat
.github/workflows/: ci.yml  release.yml
.task/checksum/: dev-ui-deps
config/: regions.yaml  settings.yaml
docs/: generated-data.md  save-parsing.md
scripts/: README.md  dev-ui.sh  ensure-ui-dist.ps1
src/: main.py
src/breeding/: calculator.py
src/capture/: mock_save_watcher.py  save_watcher.py  screen_grab.py  window_bind.py
src/data/: README.md  collars.py  db.py  dedup.py  furniture_stats.py  item_effects.py  item_effects_wiki.json  item_icons_wiki.json  item_slots_wiki.json  save_reader.py  stat_parser.py
src/llm/: advisor.py  breeding_strategy_context.md
src/ui/: bridge.py  debug_panel.py  overlay.py  overlay_shell.py  payload.py
src/utils/: config_loader.py  llm_user_store.py  logging_setup.py  update_checker.py
src/vision/: ocr_engine.py  region_crop.py  scene_detect.py
src/wiki/: __main__.py  pages.py  scraper.py
tests/: conftest.py  test_breeding_calculator.py  test_collars.py  test_config_loader.py  test_item_effects.py  test_llm_breeding_context.py  test_openai_verify_errors.py  test_payload.py  test_save_reader.py  test_stat_recognition.py  test_team_llm_synergy.py
tests/fixtures/: dingle.json  steamcampaign03.sav
tools/: README.md  annotate_regions.py  generate_item_effects_wiki.py  investigate_house.py  test_ocr.py  test_save_reader.py
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  bridge.ts  index.css  types.ts
ui/src/components/: AiCircleProgress.tsx  AiProgressStepper.tsx  AvgRadar.tsx  BreedingPanel.tsx  CatalogAnalyticsPanel.tsx  ClassFit.tsx  ClassIcon.tsx  HomeCarousel.tsx  LlmOpenAiForm.tsx  LlmSettingsBar.tsx  Overview.tsx  StashTipWithTooltip.tsx  StatDistribution.tsx  StatRadar.tsx  StatusBar.tsx  TeamPanel.tsx  TeamSlot.tsx  TitleBar.tsx  TopThreeList.tsx  UpdateBanner.tsx  UpdateCheckButton.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  popover.tsx  scroll-area.tsx  select.tsx  tabs.tsx  tooltip.tsx
ui/src/dev/: loaderPreview.ts  standaloneMock.ts
ui/src/hooks/: useAnimatedNumber.ts  useBridge.ts
ui/src/lib/: llmAdvisorCopy.ts
wiki_data/text/: abilities.md  breeding.md  classes.md  stats.md
