[project]
name = "mewgent"
version = "0.3.1"
description = "Live Mewgenics companion app — reads save files and provides breeding advice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "lz4>=4.4.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
